check and resolve

--- a/RMS.App/Views/Feedback/Create.cshtml
+++ b/RMS.App/Views/Feedback/Create.cshtml
@@ -10,9 +10,6 @@
 <div class="container border">
     <br />
 
-    
-
-
     <div class="row">
         <div class="col-md-6">
             <div class="form-group row">
@@ -145,7 +142,7 @@
                                     </td>
 
                                     <td style="width: 60%" class="bold">
-                                        <b class="highlighted">@comment.CommentText</b>
+                                        <b>@comment.CommentText</b>
                                         <br /><br />
                                         <span class="label label-success">@comment.CreatedOn</span>
 
