--- a/RMS.App/Views/Reply/Create.cshtml
+++ b/RMS.App/Views/Reply/Create.cshtml
@@ -54,6 +54,12 @@
         @Html.HiddenFor(model => model.EmployeeId)
         @Html.HiddenFor(model => model.EmployeeId)
 
+        @if (TempData["msg"] != null)
+        {
+            <div class="alert alert-success">
+                @Html.Raw(TempData["msg"])
+            </div>
+        }
 
         @*<div class="form-group">
                        @Html.LabelFor(model => model.Feedback.Requisition.Employee.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
