--- a/RMS.App/Views/Feedback/Create.cshtml
+++ b/RMS.App/Views/Feedback/Create.cshtml
@@ -94,27 +94,29 @@
                     }
                 </div>
                 <div class="form-horizontal row">
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new {@class = "text-danger"})
                     @Html.HiddenFor(model => model.Id)
 
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.CommentText, htmlAttributes: new { @class = "control-label col-md-12" })
+                        @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-12"})
                         <div class="col-md-12">
-                            @Html.EditorFor(model => model.CommentText, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.CommentText, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
+                            @Html.ValidationMessageFor(model => model.CommentText, "", new {@class = "text-danger"})
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <input type="submit" value="Post" class="btn btn-success" /> &nbsp;
-                    @Html.ActionLink("Back to List", "Create", "Requisitions", null, new { @class = "btn btn-info" })
+                    <input type="submit" value="Post" class="btn btn-success"/> &nbsp;
+                    @Html.ActionLink("Back to List", "Create", "Requisitions", null, new {@class = "btn btn-info"})
                 </div>
             }
 
         </div>
+
+        @*Feedback without replies*@
         <div class="col-md-7">
             @{
-                var data = ViewBag.FeedbackWithReplies;
+                var data = ViewBag.Feedback;
             }
             @if (data != null)
             {
@@ -136,6 +138,71 @@
                                     <td style="width: 30%" class="bold">
                                         Mr. <b class="highlighted">@comment.Employee.FullName</b> Says That
                                         <br/>
+                                        <br/>
+                                        <span class="label label-success">@comment.Employee.Designation.Title</span>
+
+                                    </td>
+
+                                    <td style="width: 60%" class="bold">
+                                    <b>@comment.CommentText</b>
+                                    <br/><br/>
+                                    <span class="label label-success">@comment.CreatedOn</span>
+
+
+                                    @if (User.IsInRole("User"))
+                                    {
+                                        @Html.ActionLink("Update", "Edit", "Feedback", new {id = @comment.Id}, null)
+                                    }
+
+                                    @if (User.IsInRole("Administrator") || User.IsInRole("Controller"))
+                                    {
+
+                                        <td><a href="@Url.Action("Create", "Reply", new {commentId = @comment.Id})" class="btn btn-primary">Reply</a></td>
+                                        @*<td><button class="btn btn-success pull-right btnReply" data-toggle="modal" data-target="#replyModal" value="@comment.Id">Reply</button></td>*@
+                                            @*<td style="width: 10%">@Html.ActionLink("Reply","Reply","Requisitions", new { feedbackId = @comment.Id},new {@id="btnReply"})</td>*@
+
+
+                                    }
+
+                                </tr>
+                            }
+
+
+
+                        </table>
+                    </div>
+                </div>
+
+            }
+
+
+        </div>
+
+        @*Feedback With replies*@
+        @*<div class="col-md-7">
+            @{
+                var repliesFeedback = ViewBag.FeedbackWithReplies;
+            }
+            @if (data != null)
+            {
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="text-center" style="font-size: 16px;">
+                            <strong>Comment Box</strong>
+                        </p>
+                    </div>
+                    <div class="col-md-12">
+                        <table class="table table-bordered">
+                            @Html.Hidden("returnUrl", this.Request.RawUrl)
+
+
+                            @foreach (var comment in data)
+                            {
+                                <tr>
+
+                                    <td style="width: 30%" class="bold">
+                                        Mr. <b class="highlighted">@comment.Employee.FullName</b> Says That
+                                        <br />
                                         <br />
                                         <span class="label label-success">@comment.Employee.Designation.Title</span>
 
@@ -160,7 +227,7 @@
                                             @*<td style="width: 10%">@Html.ActionLink("Reply","Reply","Requisitions", new { feedbackId = @comment.Id},new {@id="btnReply"})</td>*@
 
 
-                                        }
+                                        @*}
 
                                     </tr>
                             }
@@ -171,34 +238,11 @@
                     </div>
                 </div>
 
-                <!--------------Comment Reply Section Start-->
-                @*<div class="modal fade" id="replyModal">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header table-info">
-                                    <h3 class="modal-title">@Html.EditorFor(model => model.Requisition.RequisitionNumber, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})</h3>
-                                    <a href="#" class="close" data-dismiss="modal">&times;</a>
-                                </div>
-                                <div class="modal-body table-light">
-                                    <div>
-                                        <p id="feedbackId"></p>
-                                    </div>
-                                    @Html.Partial("Reply")
-
-                                </div>
-                                <div class="modal-footer">
-                                    <a href="#" class="btn btn-warning" title="Close" data-dismiss="modal"> Close </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>*@
-
-
-                <!-------------Comment Reply Section End-->
             }
 
 
-        </div>
+        @*</div>*@
+
     </div>
     <br />
 </div>
