--- a/RMS.App/Views/AssignRequisitions/PrintDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/PrintDetails.cshtml
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>@ViewBag.Title</title>
+    <title>Requisition Print</title>
 
     <!-- load CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
@@ -20,6 +20,13 @@
 
 <body>
 
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-info">
+        @Html.Raw(TempData["msg"])
+    </div>
+
+}
 
 <div class="container tm-container-2">
     <div class="row">
@@ -180,12 +187,12 @@
 
 <script src="~/Scripts/jquery-3.2.1.min.js"></script>
 <script>
-    $(function () {
-        $("#btnPrint").click(function () {
+    $(function() {
+        $("#btnPrint").click(function() {
             window.print();
         });
     });
-   </script>
+</script>
 
 </body>
 
