--- a/RMS.App/Views/AssignRequisitions/PrintDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/PrintDetails.cshtml
@@ -20,34 +20,44 @@
 
 <body>
 
-@if (TempData["msg"] != null)
+@*@if (TempData["msg"] != null)
 {
     <div class="alert alert-info">
         @Html.Raw(TempData["msg"])
     </div>
 
-}
+}*@
 
-<div class="container tm-container-2">
-    <div class="row">
-        <div class="col-lg-12">
+<div class="container tm-container-2 bg-light">
+    <div class="row bg-light">
+        <div class="col-md-6">
+            <br/><br /><br />
             <p class="float-left">
-                <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/bcc_logo.png" width="100" height="100" alt="Home Logo" title="Home BCC"/></a>
-                &nbsp; <strong style="font-size: 40px;" class="font-weight-bold" id="logotext">Bangladesh Computer Council</strong>
+                    <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/bcc_logo.png" width="50" height="50" alt="Home Logo" title="Home BCC" /></a>
+                    &nbsp; <strong style="font-size: 25px;" class="font-weight-bold" id="logotext">Bangladesh Computer Council</strong>
+                </p>
+            
+            
+        </div>
+        <div class="col-md-6">
+            <br /><br /><br />
+            <p class="float-left">
+                <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/bcc_logo.png" width="50" height="50" alt="Home Logo" title="Home BCC"/></a>
+                &nbsp; <strong style="font-size: 25px;" class="font-weight-bold" id="logotext">Bangladesh Computer Council</strong>
             </p>
         </div>
     </div>
 
     <!-- row -->
     <hr>
-    <div class="row tm-section-mb tm-section-mt">
+    <div class="row tm-section-mb tm-section-mt bg-light">
         <div class="col-lg-6 col-md-6 col-sm-12 pr-lg-5 mb-md-0 mb-4">
-            <h3 class="mt-2 mb-3 tm-text-gray">Office Copy</h3>
-            <div>
+            <h3 class="mt-2 mb-3 tm-text-gray text-center">Office Copy</h3>
+            <div class="text-center bg-info">
                 Requestor Information
             </div>
             <div>
-                <table class="table table-light table-active table-primary dt-responsive nowrap">
+                <table class="table dt-responsive nowrap">
                     <tr>
                         <td style="width: 35%">@Html.DisplayNameFor(model => model.Requisition.Employee.FullName)</td>
                         <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
@@ -59,7 +69,10 @@
                     </tr>
                 </table>
             </div>
-            <table class="table table-light table-active table-primary dt-responsive nowrap">
+            <div class="text-center bg-info">
+                Request Information
+            </div>
+            <table class="table dt-responsive nowrap">
                 <tr>
                     <td style="width: 25%">@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
                     <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
@@ -106,12 +119,12 @@
         </div>
         @*Driver Copy*@
         <div class="col-lg-6 col-md-6 col-sm-12 pr-lg-5 mb-md-0 mb-4">
-            <h3 class="mt-2 mb-3 tm-text-gray">Driver Copy</h3>
-            <div>
+            <h3 class="mt-2 mb-3 tm-text-gray text-center">Driver Copy</h3>
+            <div class="text-center bg-info">
                 Requestor Information
             </div>
             <div>
-                <table class="table table-light table-active table-primary dt-responsive nowrap">
+                <table class="table dt-responsive nowrap">
                     <tr>
                         <td style="width: 25%">@Html.DisplayNameFor(model => model.Requisition.Employee.FullName)</td>
                         <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
@@ -123,7 +136,11 @@
                     </tr>
                 </table>
             </div>
-            <table class="table table-light table-active table-primary dt-responsive nowrap">
+            <div class="text-center bg-info">
+                Request Information
+            </div>
+
+            <table class="table dt-responsive nowrap">
                 <tr>
                     <td style="width: 25%">@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
                     <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
@@ -171,8 +188,8 @@
 
     </div>
 
-    <input type="button" id="btnPrint" value="Print this page" class="btn btn-info"/>
-    @Html.ActionLink("Back to List", "Index", "AssignRequisitions", null, new {@class = "btn btn-info"})
+    <input type="button" id="btnPrint" value="Print" class="btn btn-info"/>
+    @Html.ActionLink("Back", "Index", "AssignRequisitions", null, new {@class = "btn btn-info"})
     <!-- Footer -->
     <footer class="row mt-5 mb-5">
         <div class="col-lg-12">
