--- a/RMS.App/Views/Feedback/Create.cshtml
+++ b/RMS.App/Views/Feedback/Create.cshtml
@@ -156,25 +156,56 @@
                                     <span class="label label-success">@comment.CreatedOn</span>
                                 </td>
 
-
-                                @if (User.IsInRole("User"))
+                                @if (@comment.Replies.Count == 0)
                                 {
-                                    @Html.ActionLink("Update", "Edit", "Feedback", new { id = @comment.Id }, null)
+                                   if (User.IsInRole("User"))
+                                   {
+                                    <td>
+                                        @Html.ActionLink("Update", "Edit", "Feedback", new { id = @comment.Id }, null)
+                                    </td>
+                                   }
                                 }
+                                
 
                                 @if (User.IsInRole("Administrator") || User.IsInRole("Controller"))
                                 {
 
                                     <td><a href="@Url.Action("Create", "Reply", new {commentId = @comment.Id})" class="btn btn-primary">Reply</a></td>
-                                        @*<td><button class="btn btn-success pull-right btnReply" data-toggle="modal" data-target="#replyModal" value="@comment.Id">Reply</button></td>*@
-                                        @*<td style="width: 10%">@Html.ActionLink("Reply","Reply","Requisitions", new { feedbackId = @comment.Id},new {@id="btnReply"})</td>*@
-
-
+                                    @*<td><button class="btn btn-success pull-right btnReply" data-toggle="modal" data-target="#replyModal" value="@comment.Id">Reply</button></td>*@
+                                    @*<td style="width: 10%">@Html.ActionLink("Reply","Reply","Requisitions", new { feedbackId = @comment.Id},new {@id="btnReply"})</td>*@
+                                    
                                 }
-
                             </tr>
 
+                            //Replies
+
+                            if(@comment.Replies.Count != 0)
+                            {
+                                <tr>
+                                    <td style="width: 30%" class="bold">
+                                        Mr. <b class="text-danger">Controller</b> Says That
+                                        <br />
+                                        <br />
+                                        <span class="label label-success">Controller</span>
+
+                                    </td>
+
+                                    @foreach (var r in @comment.Replies)
+                                    {
+                                        <td style="width: 60%" class="bold">
+                                            <b>@r.ReplyText</b>
+                                            <br /><br />
+                                            <span class="label label-success">@r.CreatedOn</span>
+                                        </td>
+                                    }
+                                    
+                                </tr>
+                            }
+
+
                         }
+                          
+
 
 
 
