Cancel Requisition From User Aspect

--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -85,6 +85,7 @@
                             @if (@item.StatusType == "New")
                             {
                                 @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId }, new { @class = "btn btn-warning btn-sm" })
+                                @Html.ActionLink(" Cancel", "Create", "CancelRequisition", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-danger btn-sm" })<span> </span>
                             }
                             
                             @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-success btn-sm" })
