--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -187,7 +187,7 @@
                 if (cancelInformation != null)
                 {
                     <br/>
-                    <h4>Reason of Cancle!</h4>
+                    <h4>Reason of Cancel!</h4>
                     <hr/>
                     @*<div class="col-md-2">@Html.DisplayName("Exaplanation")</div>*@
                     <div class="col-md-10 text-danger">@cancelInformation.Reason</div>
